--- a/ACL4SSR_Online_Full_AdblockPlus.ini
+++ b/ACL4SSR_Online_Full_AdblockPlus.ini
@@ -10,7 +10,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=🏠 内部网络,https://raw.gitmirror.com/PaPaPR/ClashRules/master/InnerNetwork.list
+ruleset=🖥 内部网络,https://raw.gitmirror.com/PaPaPR/ClashRules/master/InnerNetwork.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
