--- a/ACL4SSR_Online_Full_AdblockPlus.ini
+++ b/ACL4SSR_Online_Full_AdblockPlus.ini
@@ -56,7 +56,7 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`^(?!.*IPLC).*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`^(?!.*IPLC).*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`^(?!.*IPLC).*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🖥 内部网络`select`[]DIRECT`[]💻 个人节点`[]🚀 节点选择
+custom_proxy_group=🖥 内部网络`select`[]💻 组网节点`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
@@ -87,7 +87,7 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`^(?!.*IPLC).*(KR|Korea|KOR|首
 custom_proxy_group=🎥 奈飞节点`select`^(?!.*IPLC).*(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=☁️ WARP节点`select`(WARP)
 custom_proxy_group=🌐 IPLC节点`select`(IPLC|iplc)
-custom_proxy_group=💻 个人节点`select`(OWN|own)
+custom_proxy_group=💻 组网节点`select`(tunnel)
 ;设置分组标志位
 
 enable_rule_generator=true
